[package]
name = "gravlax"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
cargo-expand = "1.0.34"
clap = { version = "4.0.11", features = ["derive"] }
lazy_static = "1.4.0"
ordered-float = "3.2.0"
phf = { version = "0.11", features = ["macros"] }
thiserror = "1.0.37"
